# autonomous_cleaning_robot_fleet_platform

./: .gitignore  README.md  docker-compose.yml  memo.txt  pyproject.toml  ロボット管理クラウド SPEC.md
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: backend-ci.yml  dashboard-ci.yml  lambda-ci.yml  terraform.yml
backend-services/command-service/: requirements.txt
backend-services/command-service/src/: main.py
backend-services/mission-service/: Dockerfile
backend-services/ota-service/: requirements.txt
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: main.tsx
docs/: DEPLOYMENT.md  generate_aws_diagram.py  generate_flow_mission.py  generate_flow_ota.py  generate_flow_telemetry.py  robotops-article.md
infrastructure/db/: init.sql
infrastructure/mosquitto/: mosquitto.conf
infrastructure/nginx/: nginx.conf
lambda/: build.sh
lambda/iot-event-bridge/: handler.py
lambda/telemetry-processor/: handler.py
lambda/tests/: test_telemetry_processor.py  test_ws_connection_manager.py  test_ws_event_pusher.py
lambda/ws-connection-manager/: handler.py
lambda/ws-event-pusher/: handler.py  requirements.txt
robot-agent/: pyproject.toml  requirements.txt
robot-agent/config/: robot.yaml
robot-agent/scripts/: provision_robot.py
robot-agent/simulation/: fleet_simulator.py
robot-agent/src/mqtt/: client.py
robot-agent/src/nodes/: robot_agent.py  state.py
robot-agent/tests/: test_robot_agent.py
scripts/: setup_github_secrets.sh
scripts/iot/: bake_claim_cert.sh  create_claim_cert.sh
(+119 files in other folders)
